force-app/main/default/objects/sugati__Financial_Charges__c/sugati__Financial_Charges__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Financial Charges</label>
</CustomObject>