force-app/main/default/objects/sugati__Financial_Charges__c/fields/sugati__Base_Agent_Commission_on_Mark_Up_Cost__c.field-meta.xml
<CustomField>
    <fullName>sugati__Base_Agent_Commission_on_Mark_Up_Cost__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Base Agent Commission on Mark Up Cost</label>
    <type>Checkbox</type>
</CustomField>