force-app/main/default/objects/sugati__Financial_Charges__c/fields/sugati__Consider_Agent_Comm_in_Sell_Price__c.field-meta.xml
<CustomField>
    <fullName>sugati__Consider_Agent_Comm_in_Sell_Price__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If you want to exclude agent commission from the sell field on supplier booking then it should be checked,</inlineHelpText>
    <label>Consider Agent Comm in Sell Price</label>
    <type>Checkbox</type>
</CustomField>