force-app/main/default/objects/sugati__Financial_Charges__c/fields/sugati__Cost_Calculation_Condition__c.field-meta.xml
<CustomField>
    <fullName>sugati__Cost_Calculation_Condition__c</fullName>
    <label>Cost Calculation Condition</label>
    <type>TextArea</type>
</CustomField>