force-app/main/default/objects/sugati__Financial_Charges__c/fields/sugati__Custom_Calculation__c.field-meta.xml
<CustomField>
    <fullName>sugati__Custom_Calculation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom Calculation</label>
    <type>Checkbox</type>
</CustomField>