force-app/main/default/objects/sugati__Financial_Charges__c/fields/sugati__Days_Before_I__c.field-meta.xml
<CustomField>
    <fullName>sugati__Days_Before_I__c</fullName>
    <label>Days Before I</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>