force-app/main/default/objects/sugati__Financial_Charges__c/fields/sugati__Days_Before_II__c.field-meta.xml
<CustomField>
    <fullName>sugati__Days_Before_II__c</fullName>
    <label>Days Before II</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>