force-app/main/default/objects/sugati__Financial_Charges__c/fields/sugati__Default_Costing_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__Default_Costing_Type__c</fullName>
    <label>Default Costing Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>