force-app/main/default/objects/sugati__Financial_Charges__c/fields/sugati__Default_Currency_Value__c.field-meta.xml
<CustomField>
    <fullName>sugati__Default_Currency_Value__c</fullName>
    <label>Default Currency Value</label>
    <length>10</length>
    <type>Text</type>
</CustomField>