force-app/main/default/objects/sugati__Financial_Charges__c/fields/sugati__Default_Map_Zoom_Value__c.field-meta.xml
<CustomField>
    <fullName>sugati__Default_Map_Zoom_Value__c</fullName>
    <label>Default Map Zoom Value</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>