force-app/main/default/objects/sugati__Financial_Charges__c/fields/sugati__Deposit_Required_III__c.field-meta.xml
<CustomField>
    <fullName>sugati__Deposit_Required_III__c</fullName>
    <label>Deposit Required III</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>