force-app/main/default/objects/sugati__Financial_Charges__c/fields/sugati__Don_t_Include_Agent_Comm_in_Net_Cost__c.field-meta.xml
<CustomField>
    <fullName>sugati__Don_t_Include_Agent_Comm_in_Net_Cost__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Don&apos;t Include Agent Commission in Net Cost Calculation</description>
    <inlineHelpText>Set to true if you do not want Agent Commission to be included in your Net Cost Calculation.</inlineHelpText>
    <label>Don&apos;t Include Agent Comm in Net Cost</label>
    <type>Checkbox</type>
</CustomField>