force-app/main/default/objects/sugati__Financial_Charges__c/fields/sugati__Don_t_Include_VAT_in_Net_Cost_Calc__c.field-meta.xml
<CustomField>
    <fullName>sugati__Don_t_Include_VAT_in_Net_Cost_Calc__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Don&apos;t Include VAT in Net Cost Calculation</description>
    <inlineHelpText>Set to true if you do not want VAT to be included in your Net Cost Calculation</inlineHelpText>
    <label>Don&apos;t Include VAT in Net Cost Calc</label>
    <type>Checkbox</type>
</CustomField>