force-app/main/default/objects/sugati__Financial_Charges__c/fields/sugati__IB_Opp_Query__c.field-meta.xml
<CustomField>
    <fullName>sugati__IB_Opp_Query__c</fullName>
    <label>IB Opp Query</label>
    <type>TextArea</type>
</CustomField>