force-app/main/default/objects/sugati__Financial_Charges__c/fields/sugati__Margin_On_IB__c.field-meta.xml
<CustomField>
    <fullName>sugati__Margin_On_IB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Margin On IB</label>
    <type>Checkbox</type>
</CustomField>