force-app/main/default/objects/sugati__Financial_Charges__c/fields/sugati__Required_Deposit_I__c.field-meta.xml
<CustomField>
    <fullName>sugati__Required_Deposit_I__c</fullName>
    <label>Required Deposit I</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>