force-app/main/default/objects/sugati__Financial_Charges__c/fields/sugati__Rule_Object__c.field-meta.xml
<CustomField>
    <fullName>sugati__Rule_Object__c</fullName>
    <label>Rule Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>