force-app/main/default/objects/sugati__Financial_Charges__c/fields/sugati__Rule_Record_Type_for_Deposit__c.field-meta.xml
<CustomField>
    <fullName>sugati__Rule_Record_Type_for_Deposit__c</fullName>
    <defaultValue>&quot;Deposit&quot;</defaultValue>
    <description>List all the record types from rule object which needs to be considered while calculating the deposit amount for the booking. 
Each record type must start from a new line.</description>
    <inlineHelpText>List all the record types from rule object which needs to be considered while calculating the deposit amount for the booking. 
Each record type must start from a new line.</inlineHelpText>
    <label>Rule Record Type for Deposit</label>
    <type>TextArea</type>
</CustomField>