force-app/main/default/objects/sugati__Financial_Charges__c/fields/sugati__SB_Image_Search_By__c.field-meta.xml
<CustomField>
    <fullName>sugati__SB_Image_Search_By__c</fullName>
    <label>SB Image Search By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>