force-app/main/default/objects/sugati__Financial_Charges__c/fields/sugati__Sell_For_FT__c.field-meta.xml
<CustomField>
    <fullName>sugati__Sell_For_FT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sell On IB</label>
    <type>Checkbox</type>
</CustomField>