force-app/main/default/objects/sugati__Financial_Charges__c/fields/sugati__Supplier_Cost_By_Payment_Currency__c.field-meta.xml
<CustomField>
    <fullName>sugati__Supplier_Cost_By_Payment_Currency__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Supplier Cost By Payment Currency</label>
    <type>Checkbox</type>
</CustomField>