force-app/main/default/objects/sugati__Financial_Charges__c/fields/sugati__Supplier_Invoice__c.field-meta.xml
<CustomField>
    <fullName>sugati__Supplier_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Supplier Invoice?</label>
    <type>Checkbox</type>
</CustomField>