force-app/main/default/objects/sugati__Financial_Charges__c/fields/sugati__Traget_Check_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__Traget_Check_Date__c</fullName>
    <label>Target Check Date</label>
    <length>30</length>
    <type>Text</type>
</CustomField>