force-app/main/default/objects/sugati__Financial_Charges__c/fields/sugati__Using_Margin_Markup_Object__c.field-meta.xml
<CustomField>
    <fullName>sugati__Using_Margin_Markup_Object__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Using Margin &amp; Markup Object</label>
    <type>Checkbox</type>
</CustomField>