force-app/main/default/objects/sugati__Financial_Charges__c/fields/sugati__Using_Only_Margin_Object__c.field-meta.xml
<CustomField>
    <fullName>sugati__Using_Only_Margin_Object__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Using Only Margin Object</label>
    <type>Checkbox</type>
</CustomField>